apps/renovate/redis/networkpolicies/redis.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redis
  namespace: renovate
spec:
  endpointSelector:
    matchLabels:
      app: renovate
      component: redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: renovate
            component: job
            io.kubernetes.pod.namespace: renovate
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
